--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
 	},
 	"homepage": "https://github.com/joshstrange/eufy-robovac#readme",
 	"dependencies": {
-		"tuyapi": "^5.3.1"
+		"tuyapi": "^7.5.2"
 	},
 	"devDependencies": {
 		"@types/node": "^12.0.2",
-		"typescript": "^3.4.5",
-		"rimraf": "^3.0.2"
+		"rimraf": "^3.0.2",
+		"typescript": "^3.4.5"
 	}
 }
